# json-canonicalization

./: pyproject.toml
python3/: pyproject.toml
