[tool.poetry]
name = "org.webpki.json"
version = "0.1.0"
description = "rfc8785 JSON canonicalization"
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
packages = [
  {include = "org", from="src"}
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
